# spi_MCP23S17_RaspbaryyPi_Pico

./: README.md
spi_MCP23S17/: CMakeLists.txt  spi_MCP23S17.c
